hands-on/Kubernetes/eks-03-AWS-EKS-ALB-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-clarusshop
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    #alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # To use certificate add annotations below.
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:452889875890:certificate/f0130003-f3b3-434b-99d9-230f9007f5e4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - host: www.devopsyasin.com
  - http:
      paths:
      - path: /account
        backend:
            serviceName: account-service
            servicePort: 80
      - path: /inventory
        backend:
            serviceName: inventory-service
            servicePort: 80
      - path: /shipping
        backend:
            serviceName: shipping-service
            servicePort: 80
      - path: /
        backend:
          serviceName: storefront-service
          servicePort: 80
